--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@nomiclabs/hardhat-etherscan": "^3.0.0",
     "@openzeppelin/contracts": "^4.8.2",
     "hardhat": "^2.13.0",
-    "hardhat-gas-reporter": "^1.0.8",
     "solidity-coverage": "^0.7.21"
   },
   "devDependencies": {
@@ -28,6 +27,7 @@
     "chai": "^4.3.7",
     "ethereum-waffle": "^4.0.10",
     "ethers": "^5.7.2",
-    "hardhat-deploy": "^0.11.25"
+    "hardhat-deploy": "^0.11.25",
+    "hardhat-gas-reporter": "^1.0.9"
   }
 }
